--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                                         <li> Intermediate Macroeconomics 332, Semester 2, 2015 </li>
                                         <li> Introduction to Macroeconomics 122/142, Semester 1, 2016 </li>
                                         <li> Mathematical Economics 235, Semester 2, 2016 </li>
-                                        <li> Principles of Macroeconomics 132 (Thuthuka Programme),2014,2015, 2016 </li>
+                                        <li> Principles of Macroeconomics 132 (Thuthuka Accounting Programme),2014,2015, 2016 </li>
                                         <h3>Teaching Assistant, University of the Western Cape</h3>
                                         <li> Introduction to Macroeconomics 122/142, Semester 1, 2012 </li>
                                         <li> Principles of Macroeconomics 132, Semester 1, 2013 </li>
