--- a/index.html
+++ b/index.html
@@ -96,13 +96,33 @@
                                 
                                 
                                 <p> I am a  Ph.D.  Candidate in Economics at the University of Alberta, Canada. My research is in macroeconomics with a particular interest in consumption insurance, labour markets, and DSGE modelling. </p>
-                                <p>Email:  chiparaw[at]ualberta[dot]ca</p>
+                             <!--   <p>Email:  chiparaw[at]ualberta[dot]ca</p> -->
+                             <strong>Contact </strong>
+                                <form method="post" action="#">
+                                    <div class="fields">
+                                        <div class="field half">
+                                            <label for="name">Name</label>
+                                            <input type="text" name="name" id="name" />
+                                        </div>
+                                        <div class="field half">
+                                            <label for="email">Email</label>
+                                            <input type="text" name="email" id="email" />
+                                        </div>
+                                        <div class="field">
+                                            <label for="message">Message</label>
+                                            <textarea name="message" id="message" rows="4"></textarea>
+                                        </div>
+                                    </div>
+                                    <ul class="actions">
+                                        <li><input type="submit" value="Send Message" class="primary" /></li>
+                                        <li><input type="reset" value="Reset" /></li>
+                                    </ul>
+                                </form>
+  
                                 <ul class="icons">
-                                    <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-                                    <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-                                    <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-                                    <li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-                                    <li><a href="#" class="icon brands fa-LinkedIn"><span class="label">LinkedIn</span></a></li>
+                                    <li><a href="https://twitter.com/fchipara" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+                                    <li><a href="https://github.com/francichiparawasha" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+                                    <li><a href="https://www.linkedin.com/in/francis-chiparawasha-94a08120" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
                                 </ul>
 							</article>
 
