--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
                                 
                                 
                                 <p> I am a  Ph.D.  Candidate in Economics at the University of Alberta, Canada. My research is in macroeconomics with a particular interest in consumption insurance, labour markets, and DSGE modelling. </p>
-                             <!--   <p>Email:  chiparaw[at]ualberta[dot]ca</p> -->
-                             <strong>Contact </strong>
+                               <p><strong>Email:</strong>  chiparaw[at]ualberta[dot]ca</p>
+                               <!--  <strong>Contact </strong>
                                 <form method="post" action="#">
                                     <div class="fields">
                                         <div class="field half">
@@ -117,7 +117,7 @@
                                         <li><input type="submit" value="Send Message" class="primary" /></li>
                                         <li><input type="reset" value="Reset" /></li>
                                     </ul>
-                                </form>
+                                </form> -->
   
                                 <ul class="icons">
                                     <li><a href="https://twitter.com/fchipara" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
