--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 								<span class="image main"><img src="images/sunset.png" alt="" width="250" height="110"  /></span>
                                 
                                <img border = "0" src="images/web22.png" align="right" width="275" height="350" >
-                                <p align="justify"> Welcome to my personal website.  I am currently a Ph.D. Candidate in Economics at the <a href="https://www.ualberta.ca/economics/index.html">Department of Economics, University of Alberta</a> , Canada. My research interests are in macro-and labour economics, with a particular interest in household consumption and saving behavior, labour market dynamics, and DSGE modelling.
+                                <p align="justify"> Welcome to my personal website.  I am currently a Ph.D. Candidate in Economics at the <a href="https://www.ualberta.ca/economics/index.html">Department of Economics, University of Alberta</a> , Canada. My research interests are in macroeconomics-labour economics, with a particular interest in household consumption and saving behavior, labour market dynamics, and DSGE modelling.
                                 </p>
                                <p><strong>Email:</strong>  chiparaw[at]ualberta[dot]ca</p>
                                <!--  <strong>Contact </strong>
