--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                                 <li><a href="#home"> Home </a></li>
 								<li><a href="#research">Research</a></li>
                                 <li><a href="#vitae">Curriculum Vitae</a></li>
-								<li><a href="#codes">Data and Codes</a></li>
+                                <!-- <li><a href="#codes">Data and Codes</a></li>-->
                                 <li><a href="#teach">Teaching</a></li>
 								<li><a href="#misc">Miscellaneous</a></li>
                                 <!-- <li><a href="#contact">Contact</a></li>-->
