--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                                 <h3 class="major"> Working in Progress</h3>
                                     
                                     <p> "An Estimated DSGE Model for the South African Labour Market" </p>
-
+                                    <p> "Marital Unemployment Gap in South Africa", (with Rejoice Mabhena)  </p>
                                     <p> "Earnings Inequality  Over the Life Cycle in South Africa", (with Rejoice Mabhena) </p>
                                 
 							</article>
