--- a/index.html
+++ b/index.html
@@ -99,7 +99,10 @@
 								<span class="image main"><img src="images/sunset.png" alt="" width="250" height="110"  /></span>
                                 
                                <img border = "0" src="images/web22.png" align="right" width="275" height="350" >
-                                <p align="justify"> Welcome to my personal website.  I am currently a Ph.D. Candidate in Economics at the <a href="https://www.ualberta.ca/economics/index.html">Department of Economics, University of Alberta</a> , Canada. My research interests are in macro-labour economics, with a particular interest in household consumption and saving behavior, labour market dynamics and DSGE modelling.
+                                <p align="justify"> Welcome to my personal website!  I am a Ph.D. Candidate at the <a href="https://www.ualberta.ca/economics/index.html">Department of Economics, University of Alberta</a> , Canada. My research interests are in macroeconomics, household finance, and labour economics, with a particular interest in household consumption and saving behavior, labour market dynamics and DSGE modelling.
+                                </p>
+                                
+                                <p align="justify"> I will be on the 2022/2023 Economics job market. Have a look at my JMP,<a href="https://drive.google.com/file/d/17-TNvvNwq25B1G8YqyisDPTcw3lGrkO9/view"> "Employment Inequality Among Prime-Age Men in Canada"
                                 </p>
                                <p><strong>Email:</strong>  chiparaw[at]ualberta[dot]ca</p>
                                <!--  <strong>Contact </strong>
