--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                                          <li> Intermediate Macroeconomics 332, Fall 2016 </li></p>
                                          
                                         <p>  <h3>Instructor, University of the Western Cape</h3>
-                                       <li> Introduction to Macroeconomics 122/142, Semester 1, 2016 </li>
+                                       <li> Introduction to Macroeconomics 122/142, Semester 1, 2016 <a href="https://drive.google.com/file/d/1HmXSDt7ReaurWOjtFCfUeG_1BaifSh7X/view?usp=sharing"> (Course Syllabus) </a> </li>
                                         <li> Mathematical Economics 235, Semester 2, 2016 </li>
                                         <li> Principles of Macroeconomics 132 (Thuthuka Accounting Programme), 2014-2016 </li>
                                         <li> Intermediate Macroeconomics 332, Semester 2, 2015 </li> </p>
