--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                 }
         </style>
         </head>
-        
 
+        
 		<!-- Wrapper -->
 			<div id="wrapper">
 
@@ -129,10 +129,10 @@
                                 </form> -->
   
                                 <ul class="icons">
-                                    <li><a href="https://twitter.com/fchipara" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
                                     <li><a href="https://github.com/francichiparawasha" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-                                    <li><a href="https://www.linkedin.com/in/francis-chiparawasha-94a08120" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-                                    <li><a href="https://scholar.google.com/citations?hl=en&view_op=list_works&gmla=AJsN-F7BDQ6cNeOYchrHYx9bfP5HwcFp-ZQP66tx_nmfIvx7CiDzF6zW8sEFw1CA7QkdXuhc9v-qOBraB_RGzZJ9Pz8PyqwMsTUBGi7P3UDmDnxTjXhTj-yeyxBeTdlePaLamy9mOMATV031q5znbj7tsK9A-lccCQ&user=K2DbfkoAAAAJ" class="icon brands fa-scholar"><span class="label">Scholar</span></a></li>
+                                    <li><a href="https://scholar.google.com/citations?hl=en&view_op=list_works&gmla=AJsN-F7BDQ6cNeOYchrHYx9bfP5HwcFp-ZQP66tx_nmfIvx7CiDzF6zW8sEFw1CA7QkdXuhc9v-qOBraB_RGzZJ9Pz8PyqwMsTUBGi7P3UDmDnxTjXhTj-yeyxBeTdlePaLamy9mOMATV031q5znbj7tsK9A-lccCQ&user=K2DbfkoAAAAJ" class="icon brands fa-google"><span class="label">Scholar</span></a></li>
+                                   <li><a href="https://www.linkedin.com/in/francis-chiparawasha-94a08120" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+                                   <li><a href="https://twitter.com/fchipara" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
                                 </ul>
 							</article>
 
