--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                                <p> I am a Ph.D. Candidate at the <a href="https://www.ualberta.ca/economics/index.html">Department of Economics, University of Alberta</a> , Canada.</p>
                                <p align ="justify" >My research interests are in Macroeconomics, Labour Economics, and Household Finance. My current research focuses household consumption and saving behavior, labour market dynamics, and DSGE modelling.
                                 </p>
-                                <p> I will be on the job market for 2022/2023  academic year. Have a look at my JMP,<a href ="https://francichiparawasha.github.io/#research">  "Employment Inequality Among Prime-Age Men in Canada"</a> </p>
+                                <p> I will be on the job market for the 2022/2023 academic year. Have a look at my JMP,<a href ="https://francichiparawasha.github.io/#research">  "Employment Inequality Among Prime-Age Men in Canada"</a> </p>
                                <p><strong>Email:</strong>  chiparaw[at]ualberta[dot]ca</p>
                                <!--  <strong>Contact </strong>
                                 <form method="post" action="#">
